fix: list of to arrays.aslist